--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity android:name=".collapsing.CollapsingToolbarActivity"></activity>
+        <activity android:name=".custombehavior.CustomBehaviorActivity"></activity>
     </application>
 
 </manifest>
